:art: Style: Code clean